--- a/login.html
+++ b/login.html
@@ -17,14 +17,14 @@
   <script language="JavaScript">
     function Check(){
       if(document.loginverify.StudentID.value =="21104" && document.loginverify.phonenumber.value =="2834"){
-      window.location}
+        window.location.herf() = 'http://oksean0330.github.io/researches'}
       else if(document.loginverify.StudentID.value =="21212" && document.loginverify.phonenumber.value =="2760"){
-      $("#10613modal").modal();}
+        window.location.herf() = 'http://oksean0330.github.io/researches'}
       else if(document.loginverify.StudentID.value =="21325" && document.loginverify.phonenumber.value =="3605"){
-      $("#10622modal").modal();}
+        window.location.herf() = 'http://oksean0330.github.io/researches'}
       else{
         alert("해당하는 데이터가 없습니다.");
-        window.location.href = 'http://과제연구.서버.한국';
+        window.location.href = 'http://oksean0330.github.io/login';
       }
   
     }
