--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
   <script language="JavaScript">
     function Check(){
       if(document.loginverify.StudentID.value =="21104" && document.loginverify.phonenumber.value =="2834"){
-        window.location.herf = 'http://oksean0330.github.io/researches'}
+        window.location.replace('http://oksean0330.github.io/researches')}
       else if(document.loginverify.StudentID.value =="21212" && document.loginverify.phonenumber.value =="2760"){
-        window.location.herf = 'http://oksean0330.github.io/researches'}
+        window.location.replace('http://oksean0330.github.io/researches')}
       else if(document.loginverify.StudentID.value =="21325" && document.loginverify.phonenumber.value =="3605"){
-        window.location.herf = 'http://oksean0330.github.io/researches'}
+        window.location.replace('http://oksean0330.github.io/researches')}
       else{
         alert("해당하는 데이터가 없습니다.");
         window.location.href = 'http://oksean0330.github.io/login';
